# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  LICENSE 3RD PARTY.md  README.md  calorienator.py  calorinator.py  codecov.yml  pyproject.toml  tasks.py
.github/workflows/: unit_tests.yml
Documentation/: 01 - User Manual.md  02 - Functional Specification.md  03 - Architectural Design.md  03 - Architecture.md  04 - Testing.md  05 - Hour Tracker.md  06 - Changelog.md  07 - TODO.md  08 - Architecture.md
Documentation/Manual/: 0_default_ingredient_prompt.md  12_log_back_in.md  12_weight_progress.md  13_morning_measurements.md  1_create_new_user.md  2_ingredient_management.md  3_single_ingredient_recipe.md  4_multi_ingredient_recipe.md  5_mealprep_recipe.md  6_cooking_mealprep.md  7_logging_a_meal.md  7_logging_single_ingredient_meal.md  8_daily_overview.md  9_log_out.md
github/workflows/: unit_tests.yml
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko3/: Tehtävä 1 - Monopoli.md  Tehtävä 2 - Laajennettu Monopoli.md  Tehtävä 3 - Sekvenssikaavio.md  Tehtävä 4 - Laajempi sekvenssikaavio.md
src/common/: __init__.py  conversion.py  crypto.py  enums.py  exceptions.py  formulae.py  security.py  statics.py  types.py  utils.py  validation.py
src/database/: default_ingredient_database.py  encrypted_database.py  ingredient_database.py  unencrypted_database.py
src/diet/: bmr.py  coef.py  enums.py  formulae.py  ingredient.py  ingredient_database.py  meal.py  mealprep.py  nutritional_values.py  recipe.py
src/entities/: ingredient.py  meal.py  mealprep.py  nutritional_values.py  recipe.py  user.py  user_credentials.py
src/gui/: gui.py  gui_menu.py
src/ui/: callback_classes.py  gui.py  gui_menu.py  shared.py
tests/: utils.py
tests/common/: __init__.py  test_conversion.py  test_crypto.py  test_exceptions.py  test_formulae.py  test_utils.py  test_validation.py
tests/database/: test_default_ingredient_database.py  test_encrypted_database.py  test_unencrypted_database.py
(+69 files in other folders)
