[tool.poetry]
name = "Calorinator"
version = "0.23.1"
description = "Diet Tracker"
authors = ["Markus Ottela <markus.ottela@helsinki.fi>"]
license = "GNU General Public License 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
pygame-menu = "^4.3.9"
pynacl = "^1.5.0"
argon2-cffi = "^21.3.0"
annotated-types = "^0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
