[tool.poetry]
name = "Calorinator"
version = "0.23.1"
description = "Diet Tracker"
authors = ["Markus Ottela <markus.ottela@helsinki.fi>"]
license = "GNU General Public License 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.4.0"
pygame-menu = "^4.4.3"
pynacl = "^1.5.0"
argon2-cffi = "^21.3.0"
annotated-types = "^0.4.0"
invoke = "^2.1.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
pylint = "^2.17.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100
ignore = ['E201', 'E202', 'E203', 'E221', 'E222', 'E241', 'E272']
in-place = true
recursive = true
aggressive = 3
